# bahcivan_market

./: db.sqlite3  main.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_address_userprofile.py
carts/: admin.py  context_processors.py  models.py  urls.py  views.py
carts/migrations/: 0001_initial.py  0002_cartitem_variations.py  0003_cartitem_user_alter_cartitem_cart.py
category/: models.py
category/migrations/: 0001_initial.py  0002_alter_category_slug.py
coupons/: admin.py  models.py
coupons/migrations/: 0001_initial.py
greatkart/: settings.py  urls.py  views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_country_remove_order_tax.py  0003_order_coupon_code_order_discount_amount_and_more.py
payments/: views.py
static/css/: custom.css
static/js/: script.js
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_variation.py  0004_alter_variation_created_date_and_more.py  0005_productgallery_reviewrating.py  0006_product_low_stock_threshold.py  0007_banner.py
templates/: base.html  home.html
templates/accounts/: account_verification_email.html  change_password.html  dashboard.html  edit_profile.html  forgetPassword.html  login.html  my_orders.html  order_detail.html  register.html  resetPassword.html  reset_password_email.html
templates/includes/: alerts.html  footer.html  navbar.html
wishlist/: admin.py  models.py
(+7 files in other folders)
