[project]
name = "bahcivan-market"
version = "0.1.0"
description = "Bahçıvan Market - Django E-commerce Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.0",
    "django-debug-toolbar>=4.4.0",
    "pillow>=10.4.0",
    "requests>=2.32.0",
    "stripe>=11.0.0",
    "django-extensions>=3.2.0",
    "django-crispy-forms>=2.3.0",
    "crispy-bootstrap4>=2024.1"
]
